--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -71,7 +71,7 @@ const c = siteConfig.colors;
             <img
               src="/cta-photo.jpg"
               alt={siteConfig.name}
-              class="w-full h-48 object-cover object-top"
+              class="w-full aspect-[4/3] object-cover object-[center_25%]"
               loading="lazy"
             />
           </picture>
